✨ Add owner nickname at groupDTO
