# controllers/groupctrl/getall.ctrl.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gofiber/fiber/v2"
 	"pentag.kr/distimer/db"
+	"pentag.kr/distimer/ent/affiliation"
 	"pentag.kr/distimer/ent/user"
 	"pentag.kr/distimer/middlewares"
 	"pentag.kr/distimer/utils/logger"
@@ -22,7 +23,7 @@ func GetJoinedGroups(c *fiber.Ctx) error {
 	userID := middlewares.GetUserIDFromMiddleware(c)
 
 	dbConn := db.GetDBClient()
-	groups, err := dbConn.User.Query().Where(user.ID(userID)).QueryJoinedGroups().All(context.Background())
+	groups, err := dbConn.User.Query().Where(user.ID(userID)).QueryJoinedGroups().WithOwner().All(context.Background())
 	if err != nil {
 		logger.Error(c, err)
 		return c.Status(500).JSON(fiber.Map{
@@ -32,6 +33,13 @@ func GetJoinedGroups(c *fiber.Ctx) error {
 
 	result := make([]groupDTO, len(groups))
 	for i, group := range groups {
+		ownerAffiliationObj, err := group.Edges.Owner.QueryAffiliations().Where(affiliation.UserID(group.Edges.Owner.ID)).Only(context.Background())
+		if err != nil {
+			logger.Error(c, err)
+			return c.Status(500).JSON(fiber.Map{
+				"error": "Internal server error",
+			})
+		}
 		result[i] = groupDTO{
 			ID:             group.ID.String(),
 			Name:           group.Name,
@@ -40,6 +48,7 @@ func GetJoinedGroups(c *fiber.Ctx) error {
 			RevealPolicy:   group.RevealPolicy,
 			InvitePolicy:   group.InvitePolicy,
 			CreateAt:       group.CreatedAt.Format(time.RFC3339),
+			OwnerNickname:  ownerAffiliationObj.Nickname,
 		}
 	}
 
