# docs/swagger.json
@@ -1955,6 +1955,7 @@
                 "invite_policy",
                 "name",
                 "nickname_policy",
+                "owner_nickname",
                 "reveal_policy"
             ],
             "properties": {
@@ -1974,6 +1975,9 @@
                     "type": "string"
                 },
                 "nickname_policy": {
+                    "type": "string"
+                },
+                "owner_nickname": {
                     "type": "string"
                 },
                 "reveal_policy": {
